--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,12 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/?useUnicode=yes&characterEncoding=UTF-8&useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/servlets
 #?autoReconnect=true&useUnicode=yes
-spring.datasource.username=isteeradmin
-spring.datasource.password=i$teer123
+spring.datasource.username=root
+spring.datasource.password=root
+
+spring.jpa.hibernate.use-new-id-generator-mappings=false
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
