--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,8 +6,15 @@ spring.datasource.password=root
 spring.jpa.hibernate.use-new-id-generator-mappings=false
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
+spring.datasource.schema=classpath:schema.sql
+spring.datasource.data=classpath:data.sql
+
+spring.cache.cache-names=personCache
+spring.cache.type=ehcache
+spring.cache.ehcache.config=classpath:ehcache.xml
 
