--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,8 +11,11 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
+spring.datasource.platform=mysql
 spring.datasource.schema=classpath:schema.sql
 spring.datasource.data=classpath:data.sql
+spring.datasource.initialization-mode=always
+spring.datasource.continue-on-error=true
 
 spring.cache.cache-names=personCache
 spring.cache.type=ehcache
